# honzel

./: .env.example  Cargo.toml
crusader/: Cargo.toml
crusader/src/: lib.rs
honzel/: Cargo.toml
honzel/migrations/: 20251214174824_init.up.sql
honzel/src/: extractor.rs  honey.rs  lib.rs  main.rs  order.rs  service.rs
honzel/src/honey/: handlers.rs  repo.rs  service.rs
honzel/src/order/: handlers.rs  repo.rs  service.rs
migrations/: 20251214174824_init.down.sql  20251214174824_init.up.sql
src/: lib.rs  main.rs
src/honey/: handlers.rs  repo.rs  service.rs
